--- a/app/src/main/res/layout/activity_vacation_list.xml
+++ b/app/src/main/res/layout/activity_vacation_list.xml
@@ -17,4 +17,13 @@
         app:srcCompat="@drawable/baseline_add_24"
         tools:layout_editor_absoluteX="328dp"
         tools:layout_editor_absoluteY="646dp" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="409dp"
+        android:layout_height="657dp"
+        tools:layout_editor_absoluteX="1dp"
+        tools:layout_editor_absoluteY="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
