--- a/app/src/main/res/menu/menu_excursion_details.xml
+++ b/app/src/main/res/menu/menu_excursion_details.xml
@@ -2,18 +2,19 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Save Vacation"
-        android:id="@+id/vacationsave"/>
+    <item android:title="Save Excursion"
+        android:id="@+id/excursionsave"/>
 
-    <item android:title="Delete Vacation"
+    <item android:title="Delete Excursion"
         android:id="@+id/vacationdelete"/>
 
-    <item android:title="Share Vacation"
+
+    <item android:title="Share Note"
         android:orderInCategory="100"
         android:icon="@drawable/baseline_airplanemode_active_24"
         android:id="@+id/share"/>
 
-    <item android:title="Add Sample Excursions"
-        android:id="@+id/addSampleExcursions"/>
-
+    <item android:title="Notify"
+        android:orderInCategory="100"
+        android:id="@+id/notify"/>
 </menu>
