B5a. Display a detailed view of the excursion, including the title and date.

--- a/app/src/main/res/menu/menu_excursion_details.xml
+++ b/app/src/main/res/menu/menu_excursion_details.xml
@@ -14,7 +14,7 @@
         android:icon="@drawable/baseline_airplanemode_active_24"
         android:id="@+id/share"/>
 
-    <item android:title="Notify"
+    <item android:title="Set Notification"
         android:orderInCategory="100"
         android:id="@+id/notify"/>
 </menu>
