--- a/app/src/main/res/layout/activity_excursion_details.xml
+++ b/app/src/main/res/layout/activity_excursion_details.xml
@@ -69,7 +69,7 @@
                 android:layout_height="match_parent"
                 android:text="Date"/>
 
-            <TextView
+            <EditText
                 android:layout_width="200dp"
                 android:layout_height="match_parent"
                 android:inputType="none"
