B3f..  Include sharing features so the user can share all the vacation details via a sharing feature (either e-mail, clipboard, or SMS) that automatically populates with the vacation details and the vacation's associated excursions, if there are any.

--- a/app/src/main/res/menu/menu_vacation_details.xml
+++ b/app/src/main/res/menu/menu_vacation_details.xml
@@ -8,7 +8,7 @@
     <item android:title="Delete Vacation"
         android:id="@+id/vacationdelete"/>
 
-    <item android:title="Share Vacation"
+    <item android:title="Share Vacation Details"
         android:orderInCategory="100"
         android:icon="@drawable/baseline_airplanemode_active_24"
         android:id="@+id/share"/>
