B3h. & B5b.  Enable the user to add, update, and delete as many excursions as needed, with the ability to enter, edit, and delete excursion information.

--- a/app/src/main/res/menu/menu_excursion_details.xml
+++ b/app/src/main/res/menu/menu_excursion_details.xml
@@ -6,7 +6,7 @@
         android:id="@+id/excursionsave"/>
 
     <item android:title="Delete Excursion"
-        android:id="@+id/vacationdelete"/>
+        android:id="@+id/excursiondelete"/>
 
 
     <item android:title="Share Note"
