--- a/app/src/main/res/layout/excursion_list_item.xml
+++ b/app/src/main/res/layout/excursion_list_item.xml
@@ -6,27 +6,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="200dp"
+        android:id="@+id/excursionNameTextView"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
         android:background="@color/cardview_light_background"
         android:text="TextView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteX="149dp"
-        tools:layout_editor_absoluteY="196dp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_margin="2dp"
-        android:background="@color/cardview_light_background"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toRightOf="@id/textView3"
-        tools:layout_editor_absoluteX="149dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:layout_editor_absoluteY="196dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
